--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.6"
+    "express-formidable": "^1.2.0",
+    "formidable": "^1.2.2",
+    "mongoose": "^5.12.7",
+    "multer": "^1.4.2"
   }
 }
