--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formidable": "^1.2.2",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
+    "node-telegram-bot-api": "^0.53.0",
     "nodemailer": "^6.6.1"
   }
 }
