--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
     "node-telegram-bot-api": "^0.53.0",
-    "nodemailer": "^6.6.1"
+    "nodemailer": "^6.6.1",
+    "path": "^0.12.7"
   }
 }
